@@ -41,7 +41,7 @@ public final class AccountAliasJsonParser {
 
   private static String requiredString(final Object value, final String path) {
     final String string = optionalString(value);
-    if (string == null || string.isBlank()) {
+    if (string == null || string.trim().isEmpty()) {
       throw new IllegalStateException(path + " must be a non-empty string");
     }
     return string.trim();
@@ -49,7 +49,7 @@ public final class AccountAliasJsonParser {
 
   private static String requiredExactString(final Object value, final String path) {
     final String string = optionalString(value);
-    if (string == null || string.isBlank()) {
+    if (string == null || string.trim().isEmpty()) {
       throw new IllegalStateException(path + " must be a non-empty string");
     }
     if (!string.trim().equals(string)) {
